<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/dark_mode_icon"
        app:showAsAction="always"
        android:title="">

        <menu>
            <item
                android:id="@+id/lightModeItemID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/light_mode" />
            <item
                android:id="@+id/darkModeItemID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/dark_mode" />
            <item
                android:id="@+id/defaultModeItemID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/default_mode" />

        </menu>
    </item>

</menu>