<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.text.InputType"/>
        <import type="android.view.View" />
        <import type="com.google.android.material.textfield.TextInputLayout"/>

        <variable
            name="fragmentEditTaskDataBindingVariable"
            type="com.example.todolist.ui.uielements.fragments.EditTaskFragment" />

        <variable
            name="passedTaskDataDataBindingVariable"
            type="com.example.todolist.domain.models.dataclasses.TaskParcel" />
        
        <variable
            name="passedTaskDate"
            type="String" />

        <variable
            name="fragmentsUtilityClassVariable"
            type="com.example.todolist.ui.uielements.FragmentsUtility" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/editTaskFragmentToolbar"
            style="@style/customToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Edit Task">

            <ImageView
                android:id="@+id/deleteTaskEditFragmentIV"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:onClick="@{() -> fragmentEditTaskDataBindingVariable.showDeleteTaskDialogToRemoveTask()}"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_task"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/editTaskFragmentToolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/editTaskFragmentContainerCL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/whatIsToBeDone2TV"
                    style="@style/customTaskTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTaskTextInputLayout"
                    style="@style/customTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/whatIsToBeDone2TV">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTaskTextInputEditText"
                        style="@style/customTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_task"
                        android:text="@{passedTaskDataDataBindingVariable.task}"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/taskFinishedCheckBox"
                    style="@style/customCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(view, checked) -> fragmentEditTaskDataBindingVariable.showDeleteTaskDialogToFinishTask()}"
                    android:text="@string/task_finished"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/editTaskTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/editTaskTextInputLayout"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/dueDateTV"
                    style="@style/customTaskDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/taskFinishedCheckBox" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/editDateOptionCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dueDateTV">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTaskDateTTextInputLayout"
                        style="@style/customTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editedCalendarAndRemoveDateLL"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTaskDateTextInputEditText"
                            style="@style/customTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/select_date"
                            android:inputType="@{InputType.TYPE_NULL}"
                            android:maxLength="17"
                            android:onClick="@{() -> fragmentEditTaskDataBindingVariable.showDatePickerAndGetDate(editTaskDateTextInputEditText)}"
                            android:onFocusChange="@{(v, hasFocus) -> fragmentEditTaskDataBindingVariable.onDateTextInputEditTextFocus(hasFocus)}"
                            android:onTextChanged="@{(s, start, count, before) -> fragmentsUtilityClassVariable.dateTextInputEditTextTextWatcher(s, removeDateImageView, timeOptionConstraintLayout, editTaskTimeTextInputEditText)}"
                            android:text="@{passedTaskDate}"
                            android:textCursorDrawable="@android:color/transparent"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/editedCalendarAndRemoveDateLL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <ImageView
                            android:id="@+id/removeDateImageView"
                            style="@style/customIcon"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:onClick="@{() -> fragmentsUtilityClassVariable.clearInput(editTaskDateTextInputEditText)}"
                            android:src="@drawable/remove_icon"
                            android:visibility="gone"
                            android:contentDescription="@string/clear_date_input"/>

                        <ImageView
                            android:id="@+id/editDateCalendar"
                            style="@style/customIcon"
                            android:layout_weight="1"
                            android:onClick="@{() -> fragmentEditTaskDataBindingVariable.showDatePickerAndGetDate(editTaskDateTextInputEditText)}"
                            android:src="@drawable/calendar_icon"
                            android:contentDescription="@string/show_date_pciker"/>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/timeOptionConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editDateOptionCL">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTaskTimeTextInputLayout"
                        style="@style/customTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editedTimeAndRemoveTimeLL"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTaskTimeTextInputEditText"
                            style="@style/customTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/select_time"
                            android:maxLength="8"
                            android:inputType="@{InputType.TYPE_NULL}"
                            android:onFocusChange="@{(v, hasFocus) -> fragmentEditTaskDataBindingVariable.onTimeTextInputEditTextFocus(hasFocus)}"
                            android:onTextChanged="@{(s, start, count, after) -> fragmentsUtilityClassVariable.timeTextInputEditTextTextWatcher(s, removeEditedTimeImageView)}"
                            android:text="@{passedTaskDataDataBindingVariable.taskDate != null || passedTaskDataDataBindingVariable.taskTimeInSeconds != 0 ? passedTaskDataDataBindingVariable.taskTimeInString : null}"
                            android:onClick="@{() -> fragmentEditTaskDataBindingVariable.showTimePickerAndGetTime(editTaskTimeTextInputEditText)}"
                            android:textCursorDrawable="@android:color/transparent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/editedTimeAndRemoveTimeLL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <ImageView
                            android:id="@+id/removeEditedTimeImageView"
                            style="@style/customIcon"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:onClick="@{() -> fragmentsUtilityClassVariable.clearInput(editTaskTimeTextInputEditText)}"
                            android:src="@drawable/remove_icon"
                            android:visibility="gone"
                            android:contentDescription="@string/clear_time_input"/>

                        <ImageView
                            android:id="@+id/editTimeCalendar"
                            style="@style/customIcon"
                            android:layout_weight="1"
                            android:onClick="@{() -> fragmentEditTaskDataBindingVariable.showTimePickerAndGetTime(editTaskTimeTextInputEditText)}"
                            android:src="@drawable/time_icon"
                            android:contentDescription="@string/show_time_picker"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveChangesFAB"
            style="@style/customFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/save_edited_task"
            android:onClick="@{() -> fragmentEditTaskDataBindingVariable.insertEditedTaskToRoom()}"
            android:src="@drawable/done_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>